# fast-mcp

./: .env.example  .gitignore  data_client.py  data_server.py  main.py  main_server.py  pyproject.toml  server.py  streamlit_app.py
app/: ai_coach_router.py  analyze_router.py  emotion_router.py  goal_setting_router.py  graph_workflow.py  main.py  main_graph.py  main_graph_frontandside.py  main_graph_graph.py  recommendation_router.py  recommender_main.py  youtube_router.py
app/agents/: comment_agent_05.py  script_agent_05.py  youtube_agent.py
app/graph/: recommendation_builder.py  recommendation_nodes.py  state.py
app/graph2/: builder.py  edges.py  nodes.py  state.py
app/nodes/: chatbot_node.py
app/services/: ai_coach_service.py  base_vector_db.py  exercise_vector_db.py  posture_analyzer.py  radar_chart.py  recommend.py  recommend_exercise_service.py
app/utils/: __init__.py  pose_utils.py
exercise-scheduler/: backend_server.py  config.py  main.py  main2.py  setup_db.py
exercise-scheduler/app/: api_client.py  main.py  main2.py  nodes.py  state.py
exercise-scheduler/app/graph/: builder.py  builder2.py  edges.py  nodes.py  state.py
exercise-scheduler/app/services/: api_client.py  notification.py
fastapi_example/: echo_server.py  math_server.py  server.py
scripts/: build_exercise_vector_db.py
streamlit/: run_streamlit.py  streamlit_app.py
tests/: test_posture.py
